syntax = "proto3";

import "Room/RoomPositionOffsetData.proto";
import "Room/Structure/RoomStructureDoorData.proto";

message UpdateRoomStructureData {
    optional RoomPositionOffsetData offset = 1;
    
    repeated string grid = 2;

    optional RoomStructureDoorData door = 3;

    optional uint32 floor_thickness = 4;
    optional uint32 wall_thickness = 5;

    optional bool wall_hidden = 6;
    optional uint32 wall_height = 7;
}
